Fix IDE warnings