@@ -8,17 +8,11 @@ import com.x250.plantservice.exception.EntityNotFoundException;
 import com.x250.plantservice.model.Plant;
 import com.x250.plantservice.service.PlantService;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
-import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
@@ -67,7 +61,7 @@ class PlantControllerTest {
 
     @Test
     void testGetAllPlants() throws Exception {
-        when(plantService.getAllPlants()).thenReturn(Arrays.asList());
+        when(plantService.getAllPlants()).thenReturn(List.of());
 
         mockMvc.perform(MockMvcRequestBuilders.get("/api/plant/")
                         .contentType(MediaType.APPLICATION_JSON))
@@ -91,7 +85,7 @@ class PlantControllerTest {
 
         ObjectMapper objectMapper = new ObjectMapper();
 
-        List<Plant> plants = objectMapper.readValue(content, new TypeReference<List<Plant>>() {
+        List<Plant> plants = objectMapper.readValue(content, new TypeReference<>() {
         });
         //then
         assertTrue(plants.isEmpty());
